[package]
name = "valkey-rbac"
version = "0.1.0"
edition = "2024"

[dependencies]
valkey-module = { version = "0.1.9" }
valkey-module-macros = { version = "0.1.9" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
paste = "1.0.15"
linkme = "0.3.33"

[dev-dependencies]
anyhow = "1.0.98"
redis = "0.32.0"


[features]
enable-system-alloc = ["valkey-module/enable-system-alloc"]
min-redis-compatibility-version-7-2 = ["valkey-module/min-redis-compatibility-version-7-2"]
min-valkey-compatibility-version-8-0 = ["valkey-module/min-valkey-compatibility-version-8-0"]
use-redismodule-api = ["valkey-module/use-redismodule-api"]
default = ["min-redis-compatibility-version-7-2", "use-redismodule-api"]

[lib]
crate-type = ["cdylib"]
